--- a/yzm.html
+++ b/yzm.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>设置</title>
+    <title>滑块旋转图片角度验证码</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta name="keywords" content="{:config('web.WEB_KEY')}" />
-    <meta name="description" content="{:config('web.WEB_DES')}" />
-    <link rel="stylesheet" href="/static/css/md.css" />
+    <meta name="keywords" content="滑块旋转图片角度验证码" />
+    <meta name="description" content="滑块旋转图片角度验证码" />
+    <link rel="stylesheet" href="/md.css" />
     <style>
       body {
         margin: 0;
