--- a/demo/index.html
+++ b/demo/index.html
@@ -35,7 +35,7 @@
             <div
               class="vcode-spin-img"
               id="vcode-spin-img754"
-              style='transform: rotate(0deg);background-image: url("{$img}");'
+              style='transform: rotate(0deg);background-image: url("https://scupte.github.io/xuanzhaunyanz/demo/yzpic.png");'
             ></div>
             <div class="vcode-spin-mask hide" id="vcode-spin-mask754"></div>
             <div class="vcode-spin-icon hide" id="vcode-spin-icon754"></div>
@@ -67,7 +67,7 @@
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script>
-      var rotate = "{$rotate}";
+      var rotate = 246;
       witdh = 0;
       $("body").on("mousedown", "#vcode-spin-button751", function(q) {
         x1 = q.pageX;
