--- a/demo/index.html
+++ b/demo/index.html
@@ -53,7 +53,7 @@
             </div>
           </div>
           <p class="vcode-slide-footer" id="pass-spin-footer754">
-            摄影师：阿政 该作品经[XuperIPR]版权存证
+            主图来源网络
           </p>
           <div class="button">
             重置
